# worldgen

./: Cargo.toml
examples/: gui_tool.rs
examples/support/: mod.rs
src/: dual_graph.rs  peak_automata.rs  simple_wind.rs
