[package]
name = "worldgen"
version = "0.1.0"
authors = ["Karl Bergström <karl.anton.bergstrom@gmail.com>", "Walter Pearce <jaynus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["serde-1"]
serde-1 = ["serde"]
gui-tool = ["glium", "clipboard", "imgui", "imgui-glium-renderer", "imgui-winit-support", "imgui", "rand_xorshift", "sha2"]

[dependencies]
voronoi = { git = "https://github.com/jaynus/rust_voronoi.git" }
rbf_interp = { git = "https://github.com/jaynus/rbf_interp.git" }
spade = "1.8"
petgraph = { version = "0.4", features = ["serde-1"] }
image = "0.22"
imageproc = "0.19"
itertools = "0.8"
nalgebra = "0.18"
rand = "0.7.0"
conv = "0.3"
num = "0.2"
failure = "0.1"
rayon = "1"
serde = { version = "1.0", features = ["derive"], optional = true }
smallvec = "0.6"
delaunator = "0.2"
log = "0.4"

# Gui example requirements
clipboard = { version = "0.5", optional = true }
glium = { version = "0.25", default-features = true, optional = true }
imgui = { version = "0.2", optional = true }
imgui-glium-renderer = { version = "0.2", optional = true }
imgui-winit-support = { version = "0.2", optional = true }
rand_xorshift = { version = "0.2", optional = true }
sha2 = { version = "0.8", optional = true }

[dev-dependencies]
rand_xorshift = "0.2"

[[example]]
name = "gui_tool"
required-features = ["gui-tool"]